<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="@dimen/layout_vertical_margin"
    android:paddingBottom="@dimen/layout_vertical_margin"
    android:paddingLeft="@dimen/layout_horizontal_margin"
    android:paddingRight="@dimen/layout_horizontal_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/systrace_tips"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/systrace_des"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_interval"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:singleLine="true"
            android:ems="3"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:text="@string/default_interval" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/interval_unit"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- <CheckBox
        android:id="@+id/cpu_mode"
        style="@style/checkbox"
        android:text="@string/cpu_mode" />

    <CheckBox
        android:id="@+id/gpu_mode"
        style="@style/checkbox"
        android:text="@string/gpu_mode" /> -->

    <Button
        android:id="@+id/start"
        style="@style/mainButton"
        android:layout_marginTop="21dp"
        android:text="@string/systrace_start" />

    <Button
        android:id="@+id/stop"
        style="@style/mainButton"
        android:layout_marginTop="16dp"
        android:text="@string/systrace_stop" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/white" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="@dimen/github_size"
        android:layout_height="@dimen/github_size"
        android:layout_marginTop="13dp"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/github_logo" />
</LinearLayout>
